# bevy-state-plugin-generator

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  Readme.md  build.rs  justfile  rustfmt.toml
examples/: .gitignore  app.rs  generated_states.rs  states.txt
hooks/: pre-commit  pre-push
report/: index.html
src/: config.rs  generate.rs  generator.rs  lib.rs  model.rs  models.rs  naming.rs  nodes.rs  parse.rs  parser.rs  parsers.rs  processing.rs  split_case.rs  stack_parser.rs  testing.rs  tests.rs  tests_bak.rs  todo.md  tokens.rs  tree.rs
src/generate/: core.rs  mod.rs  tests.rs
src/generator/: Readme.md  context.rs  generate.rs  mod.rs  models.rs  naming.rs  state_defs.rs  tests.rs
src/naming/: tests.rs
src/parser/: tests.rs
src/parsers/: tests.rs
src/parsing/: Readme.md  header.rs  mod.rs  parsers.rs  tests.rs  tokens.rs
src/processing/: Readme.md  mod.rs  tests.rs
src/snapshots/: bevy_state_plugin_generator__generate__tests__generate_debug_info@fruits.txt.snap  bevy_state_plugin_generator__generate__tests__generate_debug_info@root.txt.snap  bevy_state_plugin_generator__generate__tests__generate_full_source@mixed-nested-states.txt.snap  bevy_state_plugin_generator__generate__tests__generate_full_source@root.txt.snap  bevy_state_plugin_generator__generate__tests__generate_plugin_source@fruits.txt.snap  bevy_state_plugin_generator__generate__tests__generate_states_plugin.snap  bevy_state_plugin_generator__generate__tests__naming_scheme@root.txt_Full.snap  bevy_state_plugin_generator__generate__tests__naming_scheme@root.txt_Shortened.snap  bevy_state_plugin_generator__generate__tests__snapshots-2.snap  bevy_state_plugin_generator__generate__tests__snapshots.snap  bevy_state_plugin_generator__generate__tests__snapshots@Full.snap  bevy_state_plugin_generator__model__tests__parse_node_try_from_str@Main { A, B }.snap  bevy_state_plugin_generator__model__tests__parse_node_try_from_str@Main.snap  bevy_state_plugin_generator__parser__tests__parse_config.snap  bevy_state_plugin_generator__parser__tests__parse_node@Name.snap  bevy_state_plugin_generator__parser__tests__parse_node@Name_[_A_{_B,_C_[D_E_{F_G}]_H_}_I_J_].snap  bevy_state_plugin_generator__parser__tests__parse_node@Name_boAbc.snap  bevy_state_plugin_generator__parser__tests__parse_node@Name_po_A_bo_B,_C_poD_E_boF_Gbcpc_H_bc_I_J_pc.snap  bevy_state_plugin_generator__parser__tests__parse_node@Name_{A}.snap  bevy_state_plugin_generator__parser__tests__parse_node_nested.snap  bevy_state_plugin_generator__stack_parser__tests__parse_node@Name.snap  bevy_state_plugin_generator__stack_parser__tests__parse_node@Name_boAbc.snap  bevy_state_plugin_generator__stack_parser__tests__parse_node@Name_po_A_bo_B,_C_poD_E_boF_Gbcpc_H_bc_I_J_pc.snap  bevy_state_plugin_generator__tests__apply_naming_scheme@nested_example_Full.snap  bevy_state_plugin_generator__tests__apply_naming_scheme@nested_example_None.snap  bevy_state_plugin_generator__tests__apply_naming_scheme@nested_example_Short.snap  bevy_state_plugin_generator__tests__apply_naming_scheme@single_node_None.snap  bevy_state_plugin_generator__tests__format_source@formatted.snap  bevy_state_plugin_generator__tests__format_source@formatted_rustfmt.snap  bevy_state_plugin_generator__tests__generate_debug_info@fruits.txt.snap  bevy_state_plugin_generator__tests__generate_debug_info@root.txt_rustfmt.snap  bevy_state_plugin_generator__tests__generate_full_source@mixed-nested-states.txt.snap  bevy_state_plugin_generator__tests__generate_full_source@mixed-nested-states.txt_rustfmt.snap  bevy_state_plugin_generator__tests__generate_full_source@root.txt.snap  bevy_state_plugin_generator__tests__generate_full_source@root.txt_rustfmt.snap  bevy_state_plugin_generator__tests__generate_states_plugin.snap  (+14 more)
test-app/: Cargo.toml  build.rs  justfile
test-app/src/: auto_generated_states.rs  generated_states.rs  generated_states_full.rs  generated_states_none.rs  generated_states_short.rs  main.rs  states.txt
(+200 files in other folders)
