[workspace]
resolver = "3"
members = [".", "test-app"]

[package]
name = "bevy_state_plugin_generator"
version = "1.3.0-beta"
edition = "2024"
license = "MIT"
description = "A build-dependency that generates a Bevy State Plugin from a simple state definition."
repository = "https://github.com/rmvermeulen/bevy-state-plugin-generator.git"

[lib]


[features]
default = ["rustfmt"]
rustfmt = ["dep:duct"]

[dependencies]
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "as_ref",
    "from",
] }
duct = { version = "1.1.0", optional = true }
indoc = "2.0.6"
itertools = "0.14.0"
lazy-regex = "3.4.1"
nom = "8.0.0"

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
insta = "1.43.2"
rstest = "0.26.1"
speculoos = "0.13.0"
tempfile = "3.22.0"

[dev-dependencies.bevy]
default-features = false
features = ["bevy_state"]
version = "0.16.1"

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]
exclude_packages = ["test-app"]
