[workspace]
resolver = "3"
members = [".", "test-app"]

[workspace.dependencies]
bevy = { version = "0.17.1", default-features = false }
bevy_platform = "0.17.1"
bevy_reflect = "0.17.1"
bevy_utils = "0.17.1"

[package]
name = "bevy_state_plugin_generator"
version = "1.4.3"
edition = "2024"
license = "MIT"
description = "A build-dependency that generates a Bevy State Plugin from a simple state definition."
repository = "https://github.com/rmvermeulen/bevy-state-plugin-generator.git"

[lib]


[features]
default = ["rustfmt"]
rustfmt = ["dep:duct"]
dev = []

[dependencies]
bevy_platform = { workspace = true }
bevy_utils = { workspace = true }
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "as_ref",
    "from",
] }
duct = { version = "1.1.0", optional = true }
indoc = "2.0.6"
itertools = "0.14.0"
lazy-regex = "3.4.1"
nom = "8.0.0"
thiserror = "2.0.17"

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
bevy_reflect.workspace = true
insta = "1.43.2"
rstest = "0.26.1"
speculoos = "0.13.0"

[dev-dependencies.bevy]
features = ["bevy_state"]
workspace = true

[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "dev"]
exclude_packages = ["test-app"]
