[package]
name = "test-app"
version = "0.1.0"
edition = "2024"

[features]
default = []
all = ["short", "full", "inline"]
short = []
full = []
inline = []

[dependencies]
bevy = { workspace = true, features = ["std", "bevy_state"] }

[build-dependencies]
bevy_state_plugin_generator = { path = "../" }
