[package]
name = "test-app"
version = "0.1.0"
edition = "2024"

[features]
all = ["short", "full", "inline"]
short = []
full = []
inline = []

[dependencies]
bevy = { workspace = true, features = ["std", "bevy_state"] }
cfg-if = "1.0.3"

[build-dependencies]
bevy_state_plugin_generator = { path = "../" }

[package.metadata.cargo-feature-combinations]
exclude_features = ["all"]
